# solana-blog-youtube

./: Anchor.toml  CODEOWNERS
app/: package-lock.json
app/src/: App.css  App.jsx  idl.json  oldidl.json
app/src/components/: PostForm.jsx
app/src/context/: Blog.jsx
app/src/context/functions/: getPostById.js  getPosts.js  getUser.js
app/src/functions/: displayKey.js  getAvatarUrl.js
app/src/pages/: dashboard.jsx  fullpost.jsx
programs/blog-sol/: Cargo.toml
programs/blog-sol/src/: lib.rs
smart-contract-solution/: lib.rs
tests/functions/: createUser.js
